can add smoot page navigation option

--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -3,6 +3,9 @@
 @tailwind utilities;
 
 @layer base {
+  html {
+    scroll-behavior: smooth;
+  }
   :root {
     --background: 84 9% 95%;
     --foreground: 24 6% 20%;
